// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Track Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="root svelte-r59qz"
  >
    <img
      alt="./cover.jpg"
      class="h-16 w-16 flex-none svelte-1k7rixd"
      loading="lazy"
      src="./cover.jpg"
    />
     
    <div
      class="track svelte-r59qz"
    >
      <span
        class="title svelte-r59qz"
      >
        Diamonds on the inside
      </span>
       
      <span
        class="artist svelte-r59qz"
      >
        Ben Harper
      </span>
    </div>
     
  </div>
</section>
`;

exports[`Storyshots Components/Track With Details 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div
    class="root svelte-r59qz"
  >
    <img
      alt="./cover.jpg"
      class="h-16 w-16 flex-none svelte-1k7rixd"
      loading="lazy"
      src="./cover.jpg"
    />
     
    <div
      class="track svelte-r59qz"
    >
      <span
        class="title svelte-r59qz"
      >
        Diamonds on the inside
      </span>
       
      <span
        class="artist svelte-r59qz"
      >
        Ben Harper
      </span>
    </div>
     
    <div
      class="duration svelte-r59qz"
    >
      2:06
    </div>
  </div>
</section>
`;
